multi-note tile jump fix

--- a/sass/components/content/_multi-note.scss
+++ b/sass/components/content/_multi-note.scss
@@ -1,3 +1,6 @@
+.multi-note-img-row {
+  min-height: 360px;
+}
 .slick-prev, .slick-next {
   border-style: solid;
   border-width: 1px;
